cabal-version: 2.4

name:                  cardano-cli
version:               1.24.2
description:           The Cardano command-line interface.
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
extra-source-files:    README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

library

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:      src

  exposed-modules:     Cardano.CLI.Helpers
                       Cardano.CLI.Parsers
                       Cardano.CLI.Run
                       Cardano.CLI.Types

                       Cardano.CLI.Environment

                       Cardano.CLI.Byron.Commands
                       Cardano.CLI.Byron.Parsers
                       Cardano.CLI.Byron.Run
                       Cardano.CLI.Byron.Delegation
                       Cardano.CLI.Byron.Genesis
                       Cardano.CLI.Byron.Key
                       Cardano.CLI.Byron.Legacy
                       Cardano.CLI.Byron.Tx
                       Cardano.CLI.Byron.Query
                       Cardano.CLI.Byron.UpdateProposal
                       Cardano.CLI.Byron.Vote

                       Cardano.CLI.Shelley.Commands
                       Cardano.CLI.Shelley.Key
                       Cardano.CLI.Shelley.Orphans
                       Cardano.CLI.Shelley.Parsers
                       Cardano.CLI.Shelley.Run
                       Cardano.CLI.Shelley.Run.Address
                       Cardano.CLI.Shelley.Run.Address.Info
                       Cardano.CLI.Shelley.Run.Genesis
                       Cardano.CLI.Shelley.Run.Governance
                       Cardano.CLI.Shelley.Run.Key
                       Cardano.CLI.Shelley.Run.Node
                       Cardano.CLI.Shelley.Run.Pool
                       Cardano.CLI.Shelley.Run.Query
                       Cardano.CLI.Shelley.Run.StakeAddress
                       Cardano.CLI.Shelley.Run.TextView
                       Cardano.CLI.Shelley.Run.Transaction

                       Cardano.CLI.Mary.RenderValue
                       Cardano.CLI.Mary.TxOutParser
                       Cardano.CLI.Mary.ValueParser

                       Cardano.CLI.TopHandler

  other-modules:       Paths_cardano_cli

  build-depends:       base >=4.12 && <5
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , bech32 >= 1.1.0
                     , binary
                     , bytestring
                     , base16-bytestring
                     , base58-bytestring
                     , canonical-json >= 0.6 && < 0.7
                     , cardano-api
                     , cardano-binary
                     , cardano-config
                     , cardano-crypto
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-shelley-ma
                     , cardano-node
                     , cardano-prelude
                     , cardano-slotting
                     , contra-tracer
                     , cborg >= 0.2.4 && < 0.3
                     , containers
                     , cryptonite
                     , directory
                     , filepath
                     , formatting
                     , io-sim-classes
                     , iproute
                     , memory
                     , network
                     , network-mux
                     , network-uri
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , primitive
                     , parsec
                     , process
                     , scientific
                     , shelley-spec-ledger
                     , small-steps
                     , split
                     , text
                     , time
                     , transformers
                     , transformers-except
                     , ouroboros-network-framework
                     , utf8-string
                     , unordered-containers
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable cardano-cli
  hs-source-dirs:      app
  main-is:             cardano-cli.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T"
  if !os(windows)
     build-depends:    unix

  build-depends:       base >=4.12 && <5
                     , cardano-cli
                     , cardano-config
                     , cardano-crypto-class
                     , cardano-prelude
                     , directory
                     , optparse-applicative
                     , text
                     , transformers-except
  default-extensions:  NoImplicitPrelude

test-suite cardano-cli-test
  hs-source-dirs:       test
  main-is:              cardano-cli-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base
                      , aeson
                      , bech32 >= 1.1.0
                      , bytestring
                      , base16-bytestring
                      , cardano-api
                      , cardano-api-test
                      , cardano-cli
                      , cardano-crypto-class
                      , cardano-ledger-shelley-ma
                      , cardano-node
                      , cardano-prelude
                      , containers
                      , deepseq
                      , directory
                      , exceptions
                      , hedgehog
                      , hedgehog-extras
                      , lifted-base
                      , optparse-applicative
                      , ouroboros-consensus-shelley
                      , parsec
                      , process
                      , shelley-spec-ledger
                      , shelley-spec-ledger-test
                      , temporary
                      , text
                      , time
                      , transformers-except
                      , unordered-containers

  other-modules:        Test.Cli.FilePermissions
                        Test.Cli.ITN
                        Test.Cli.MultiAssetParsing
                        Test.Cli.Pioneers.Exercise1
                        Test.Cli.Pioneers.Exercise2
                        Test.Cli.Pioneers.Exercise3
                        Test.Cli.Pioneers.Exercise4
                        Test.Cli.Pioneers.Exercise5
                        Test.Cli.Pioneers.Exercise6
                        Test.OptParse

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

test-suite cardano-cli-golden
  hs-source-dirs:       test
  main-is:              cardano-cli-golden.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base
                      , aeson
                      , bech32 >= 1.1.0
                      , bytestring
                      , base16-bytestring
                      , cardano-api
                      , cardano-cli
                      , cardano-crypto-wrapper
                      , cardano-ledger
                      , cardano-prelude
                      , cborg
                      , containers
                      , deepseq
                      , directory
                      , exceptions
                      , hedgehog
                      , hedgehog-extras
                      , lifted-base
                      , optparse-applicative
                      , process
                      , temporary
                      , text
                      , time
                      , transformers-except
                      , unordered-containers

  other-modules:        Test.Golden.Shelley
                        Test.Golden.Byron.SigningKeys
                        Test.Golden.Byron.Tx
                        Test.Golden.Byron.TxBody
                        Test.Golden.Byron.UpdateProposal
                        Test.Golden.Byron.Vote
                        Test.Golden.Byron.Witness
                        Test.Golden.Shelley.Address.Build
                        Test.Golden.Shelley.Address.Info
                        Test.Golden.Shelley.Address.KeyGen
                        Test.Golden.Shelley.Genesis.Create
                        Test.Golden.Shelley.Genesis.InitialTxIn
                        Test.Golden.Shelley.Genesis.KeyGenDelegate
                        Test.Golden.Shelley.Genesis.KeyGenGenesis
                        Test.Golden.Shelley.Genesis.KeyGenUtxo
                        Test.Golden.Shelley.Genesis.KeyHash
                        Test.Golden.Shelley.Key.ConvertCardanoAddressKey
                        Test.Golden.Shelley.Node.IssueOpCert
                        Test.Golden.Shelley.Node.KeyGen
                        Test.Golden.Shelley.Node.KeyGenKes
                        Test.Golden.Shelley.Node.KeyGenVrf
                        Test.Golden.Shelley.Metadata.StakePoolMetadata
                        Test.Golden.Shelley.MultiSig.Address
                        Test.Golden.Shelley.StakeAddress.Build
                        Test.Golden.Shelley.StakeAddress.DeregistrationCertificate
                        Test.Golden.Shelley.StakeAddress.KeyGen
                        Test.Golden.Shelley.StakeAddress.RegistrationCertificate
                        Test.Golden.Shelley.StakePool.RegistrationCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.GenesisKeyDelegationCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.MIRCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.OperationalCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.StakeAddressCertificates
                        Test.Golden.Shelley.TextEnvelope.Certificates.StakePoolCertificates
                        Test.Golden.Shelley.TextEnvelope.Keys.ExtendedPaymentKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisDelegateKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisUTxOKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.KESKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.PaymentKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.StakeKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.VRFKeys
                        Test.Golden.Shelley.TextEnvelope.Tx.Tx
                        Test.Golden.Shelley.TextEnvelope.Tx.TxBody
                        Test.Golden.Shelley.TextEnvelope.Tx.Witness
                        Test.Golden.Shelley.TextView.DecodeCbor
                        Test.Golden.Shelley.Transaction.Assemble
                        Test.Golden.Shelley.Transaction.Build
                        Test.Golden.Shelley.Transaction.CalculateMinFee
                        Test.Golden.Shelley.Transaction.CreateWitness
                        Test.Golden.Shelley.Transaction.Sign
                        Test.Golden.Version
                        Test.OptParse

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
